--- a/style.css
+++ b/style.css
@@ -1,24 +1,147 @@
-html,
-body {
+html, body {
     margin: 0;
-    overflow: hidden;
+    overflow: scroll;
     height: 100%;
     background-color: lightslategray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
 }
 
-#canvas {
-    /*position: absolute;*/
+#tab {
+    float: right;
+    width: 950px;
+    /*max-width: 1000px;*/
+    height: 580px;
+    margin: 120px 50px 0px auto;
+    background-color: #aaa;
+    padding: 20px;
+}
+
+#tab #drawingGrid {
+    float: right;
+    /*margin-left: 50px;*/
+}
+
+canvas {
+    width: 650px;
+    height: 450px;
     display: block;
-    width: 800px;
-    height: 550px;
-    margin: auto;
-    margin-top: -550px;
+}
+
+#label {
+    margin: -925px 0 0 -750px;
 }
 
 #gridlayer {
-    display: block;
-    width: 800px;
-    height: 550px;
-    margin: auto;
-    margin-top: 60px;
+    margin: 50px 20px 0 0;
 }
+
+#axislayer {
+    width: 710px;
+    height: 510px;
+    margin: -460px 0 0 -50px;
+}
+
+#canvas {
+    margin: -500px 20px 0 0;
+}
+
+#tab #threshold {
+    float: left;
+    width: auto;
+    max-width: 170px;
+    margin: 30px auto 0px 20px;
+    padding: 70px 0 45px 0;
+}
+
+.graphLabels {
+    float: left;
+    width: 100px;
+    margin: 20px 10px 15px 0;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.graphValues {
+    float: right;
+    width: 60px;
+    margin: 10px 0px;
+}
+
+.threshLabels {
+    float: left;
+    width: 100px;
+    margin: 5px 10px 5px 0;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.threshValues {
+    float: right;
+    width: 60px;
+    margin: 5px 0px;
+}
+
+p {
+    margin: 5px 0;
+    line-height: 20px;
+}
+
+h3 {
+    text-align: center;
+    margin: -10px 0;
+}
+
+h3.thresh {
+    margin: 140px 0 0 0;
+}
+
+input {
+    width: 60px;
+    margin-top: 5px;
+    font-size: 12px;
+    text-align: center;
+}
+
+button {
+    text-align: center;
+    font-weight: bold;
+}
+
+#changeVals {
+    width: 70px;
+    height: 25px;
+    margin: 0px 0 0 50px;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.rotate {
+    /* Safari */
+    -webkit-transform: rotate(-90deg);
+    /* Firefox */
+    -moz-transform: rotate(-90deg);
+    /* IE */
+    -ms-transform: rotate(-90deg);
+    /* Opera */
+    -o-transform: rotate(-90deg);
+    /* Internet Explorer */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
